First commit to new repository

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:book_db;INIT=CREATE SCHEMA IF NOT EXISTS product_db
+spring.datasource.url=jdbc:h2:mem:shopping_list_db;INIT=CREATE SCHEMA IF NOT EXISTS shopping_list_db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
